syntax = "proto3";

package task;

option go_package = "proto;task";

service TaskService {
    rpc SubmitJob (JobRequest) returns (JobResponse);
    rpc GetJobStatus (JobStatusRequest) returns (JobStatusResponse);
    rpc GetJobLogs (JobStatusRequest) returns (JobLogsResponse);
}

message JobRequest {
    string job_id = 1;
    string payload = 2;
}

message JobResponse {
    string message = 1;
}

message JobStatusRequest {
    string job_id = 1;
}

message JobStatusResponse {
    string status = 1;
}

message JobLogsResponse {
  repeated string logs = 1;
}